[package]
name = "leptonic"
version = "0.1.0"
edition = "2021"

[dependencies]
csscolorparser = "0.6.2"
js-sys = "0.3"
leptos = { version = "0.4", features = ["csr", "nightly"] }
leptos-use = "0.5"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "Document", "Element", "HtmlElement", "Node", "Window"] }

[dev-dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
